--- a/content/blog/fixing-long-netlify-gatsby-builds/index.mdx
+++ b/content/blog/fixing-long-netlify-gatsby-builds/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: How to fix crazy long Gatsby builds on Netlify
-date: 2021-11-05
+date: 2021-11-07
 description: For no obvious reason, it takes a lot of time to deploy my Gatsby site on Netlify, but I found why
 ---
 So I'm writing this blog post - all is good, I finish writing, checking it with Grammarly - and then I think: "OK, just three more minutes to deploy, and I'm done". 
@@ -8,32 +8,36 @@ So I'm writing this blog post - all is good, I finish writing, checking it with 
 I go to Github, create the PR for the branch with the new post, and then open Netlify to see how the deployment is going (for my PRs a new deploy is started automatically for preview.)
 
 And I wait... and I wait.. and I wait... 10 minutes went on, I panic 
-and I cancel the deploy. I'm thinking maybe there was a glitch in Netlify bowels and I start a new one. I wait again... Finally after 13 minutes the build finishes.
+and I cancel the deploy. I'm thinking maybe there was a glitch in Netlify bowels and I start a new one. I wait again... Finally after 13 minutes (instead of 3) the build finishes.
 
 
-> I'm on the free plan (Starter) on Netlify. It includes 300 minutes/30 days of build time. For all my account websites.
+> I'm on the free plan (Starter) on Netlify. It includes 300 minutes/30 days of build time. For all my account websites. So if one build takes 13 minutes, I have a problem.
 
-I run the build on my local machine, the same build runs in 2 minutes so clearly something is very wrong somewhere. So I look at the Netlify build logs:
+I run the build on my local machine, the same build runs in 2 minutes so clearly something is very wrong somewhere. 
+```
+info Done building in 81.956853735 sec
+```
 
-The first weird thing is that the cache is huge:
-![Cache is huge](./cache_log.png "Cache is huge")
+But then I run the build again several times:
+* The second time I run the build I get some strange webpack errors:
+```
+[webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: ENOENT: no such file or directory, rename '<project_folder>.cache/webpack/stage-build-html/1.pack_' -> '<project_folder>/.cache/webpack/stage-build-html/1.pack'
+...
+info Done building in 35.938077026 sec
+```
+But the build is still fast.
+* The third time, the webpack errors are gone but the build is slow
+```
+info Done building in 375.343136062 sec
+```
 
-On my local machine, the `.cache` + `public` folders are under 60Mb. Where are the other 900Mb coming from? After further investigation, I've found that this cache keeps other things also, like the `node_modules` 😅
-
-The other weird thing is that the `Caching HTML renderer compilation` takes most of the build time:
+Same thing on Netlify, `Caching HTML renderer compilation` takes most of the build time:
 ![Caching HTML renderer compilation](./build_log.png "Caching HTML renderer compilation")
 
 My Gatsby 3 build seams blocked between `onPostBuild` and `Caching HTML renderer compilation`.
 
 The cache is the issue. Instead of making the build faster, it makes it crazy slower 😞
 
-There are two fixes I did:
-
-## Clear the cache
-To get rid of the huge cache you need to go to your site page on Netlify, choose Deploys, select the last deploy, and from the "Retry deploy" dropdown, redeploy the site with the "Clear cache and redeploy site" option:
-![Clear cache](./deploy.png "Clear cache")
-
-## Use the new Essential Gatsby plugin
 Looking at my site's `netlify.toml` I see that I use a deprecated plugin for caching:
 ```
 [[plugins]]
@@ -41,9 +45,8 @@ Looking at my site's `netlify.toml` I see that I use a deprecated plugin for cac
 ```
 Which was ironically making my build slow.
 
-I've removed it, and from my website's Plugins page, I've added "Essential Gatsby" plugin:
-![Plugins](./plugins.png "Plugins")
+I've removed it.
 
 > If you use this plugin, the cache will be created again, but a bit smaller this time.
 
-After these changes, the build time is back to 3 minutes. 
+After these changes, the build time is now 5 minutes. Not 3 as before but still better then 13.
