--- a/content/blog/javascript-part-two/index.mdx
+++ b/content/blog/javascript-part-two/index.mdx
@@ -67,11 +67,11 @@ To see the "Hello, World!" text, you need to open the browser's JavaScript conso
 ### Node.js
 First, you need to install Node.js from [https://nodejs.org/en/](https://nodejs.org/en/)
 Once you did that, verify that all is OK by checking the node.js version. In a terminal/cmd run the following:
-```sh
+```shell
 node -v
 ```
 If that works go to the `learnjs` folder and, again using the terminal, type:
-```sh
+```shell
 node tutorial.js
 ```
 You should see "Hello, World!" displayed.
