--- a/content/blog/javascript-part-four/index.mdx
+++ b/content/blog/javascript-part-four/index.mdx
@@ -2,7 +2,7 @@
 title: Let's Learn JavaScript
 part: IV
 date: 2021-12-7
-description: 
+description: How to name things in JavaScript and what names you cannot use
 keywords: ['JavaScript']
 ---
 Previously on "Let's Learn JavaScript":
