--- a/content/blog/javascript-part-five/index.mdx
+++ b/content/blog/javascript-part-five/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Let's Learn JavaScript
+title: Let's Learn JavaScript - Data types
 part: V
 date: 2022-1-12
 description: Data types in JavaScript
