--- a/content/blog/javascript-part-four/index.mdx
+++ b/content/blog/javascript-part-four/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Let's Learn JavaScript
+title: Let's Learn JavaScript - Naming things
 part: IV
 date: 2021-12-7
 description: How to name things in JavaScript and what names you cannot use
