--- a/content/blog/javascript-part-one/index.mdx
+++ b/content/blog/javascript-part-one/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Let's Learn JavaScript
+title: Let's Learn JavaScript - Using JavaScript
 part: I
 date: 2021-10-29
 description: One of the most used programming languages of the world, the world's most misunderstood programming language.
