--- a/content/blog/javascript-part-three/index.mdx
+++ b/content/blog/javascript-part-three/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Let's Learn JavaScript
+title: Let's Learn JavaScript - Fundamentals
 part: III
 date: 2021-11-14
 description: One of the most used programming languages of the world, the world's most misunderstood programming language.
@@ -10,7 +10,7 @@ This is the third part of the "Let's Learn JavaScript" tutorial.
 [In the first part](/javascript-part-one), we learned how JavaScript compares to other programming languages and the mindset you need to learn JavaScript.
 And [in the second part](/javascript-part-two), we have seen we can run "Hello, World!" in JavaScript. 
 
-Now we learn to make and run our first JavaScript program, of course, the classic "Hello, World!"
+Now we continue with some fundamentals features of JavaScript.
 
 ## use strict
 JavaScript was implemented in 10 days (unlike most programming languages that were implemented in several years). As you can guess, mistakes
