--- a/content/blog/javascript-part-two/index.mdx
+++ b/content/blog/javascript-part-two/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Let's Learn JavaScript
+title: Let's Learn JavaScript - Hello World
 part: II
 date: 2021-11-06
 description: One of the most used programming languages of the world, the world's most misunderstood programming language.
