Fix deps and google indexing

--- a/content/blog/how-i-made-this-site-with-gatsby-convertkit-and-netlify/index.mdx
+++ b/content/blog/how-i-made-this-site-with-gatsby-convertkit-and-netlify/index.mdx
@@ -83,7 +83,7 @@ export default merge(typography, {
 ```
 Initially, I wanted to open an issue on this, but the `gatsby-theme-blog` is not a separate project on Github, but part of the Gatbsy project so I moved on (for the moment, I still want to hunt this down at some point, otherwise Monserrat will be the default font on a ton of Gatsby blogs).
 
-There were some other little annoying things with this theme, like not including the [external links plugin](gatsby-remark-external-links), and thus all the external links were opening in the same tab.
+There were some other little annoying things with this theme, like not including the [external links plugin](https://github.com/JLongley/gatsby-remark-external-links), and thus all the external links were opening in the same tab.
 
 ### gatsby-blog-starter
 
