--- a/content/blog/the-link-element/index.mdx
+++ b/content/blog/the-link-element/index.mdx
@@ -84,7 +84,7 @@ Sometimes the same content is used on different websites. For example, a blog po
 
 The canonical link for this page is this, no matter where this content will be shared on:
 ```html
-<link rel="canonical" href="https://raresportan.com/html-basics-part-two/" />
+<link rel="canonical" href="https://raresportan.com/the-link-element/" />
 ```
 
 ## Set alternative content
