Fix inner local links

--- a/content/blog/eleventy-part-five/index.mdx
+++ b/content/blog/eleventy-part-five/index.mdx
@@ -16,10 +16,10 @@ I think there are two good reasons why Eleventy doesn't provide great support fo
 * JavaScript code can't be used as it is. It must be transpiled and minified. For this, we usually use a tool like Webpack, Gulp, or Rollup. 
 
 So far in this series we've seen:
-* [Eleventy basics](/eleventy-part-one)
-* [Eleventy collections](/eleventy-part-two)
-* [What are slots, includes, and shortcodes, or how to create components](/eleventy-part-three)
-* [How to use images](/eleventy-part-four)
+* [Eleventy basics](/eleventy-part-one/)
+* [Eleventy collections](/eleventy-part-two/)
+* [What are slots, includes, and shortcodes, or how to create components](/eleventy-part-three/)
+* [How to use images](/eleventy-part-four/)
 
 And now we'll see how to bundle runtime JavaScript.
 
