--- a/content/blog/eleventy-part-four/index.mdx
+++ b/content/blog/eleventy-part-four/index.mdx
@@ -6,7 +6,7 @@ description: In the fourth part of the Let't Learn Eleventy series, we'll learn 
 keywords: ['Eleventy', '11ty']
 ---
 
-In the [first part](/eleventy-part-one), the [second part](/eleventy-part-two), and the [third part](/eleventy-part-three) parts we have seen:
+In the [first part](/eleventy-part-one/), the [second part](/eleventy-part-two/), and the [third part](/eleventy-part-three/) parts we have seen:
 * What is Eleventy and how to install it
 * How to use data inside a page
 * Basic configuration
@@ -75,7 +75,7 @@ Here is the layout we are trying to implement, and that's why we use sizes.
 ![Mobile](./fullscreen.png "Mobile version")
 
 ### 2. A component
-There are different options for creating components in Eleventy (I have written about that in the [third part of this series](/eleventy-part-three)),
+There are different options for creating components in Eleventy (I have written about that in the [third part of this series](/eleventy-part-three/)),
 but in this case, the best option would be a shortcode.
 
 The shortcode has a name followed by the arguments separated by comma:
