--- a/content/blog/eleventy-part-three/index.mdx
+++ b/content/blog/eleventy-part-three/index.mdx
@@ -6,7 +6,7 @@ description: This is the third part of the Let't Learn Eleventy series. We'll le
 keywords: ['Eleventy', '11ty']
 ---
 
-In the [first part](/eleventy-part-one) and the [second part](/eleventy-part-two) parts we have seen:
+In the [first part](/eleventy-part-one/) and the [second part](/eleventy-part-two/) parts we have seen:
 * What is Eleventy and how to install it
 * How to use data inside a page
 * Basic configuration
