--- a/content/blog/eleventy-part-two/index.mdx
+++ b/content/blog/eleventy-part-two/index.mdx
@@ -7,7 +7,7 @@ keywords: ['Eleventy', '11ty']
 ---
 
 This is the second part of *Let's Learn Eleventy* series and will talk about collections.
-In the [first part](/eleventy-part-one) we have seen:
+In the [first part](/eleventy-part-one/) we have seen:
 * What is Eleventy and how to install it
 * How to use data inside a page
 * Basic configuration
