--- a/content/blog/how-to-reduce-website-https-requests-for-images/index.mdx
+++ b/content/blog/how-to-reduce-website-https-requests-for-images/index.mdx
@@ -6,7 +6,7 @@ keywords: ['HTML', 'SVG', 'CSS']
 ---
 
 Images are an important part of any website. So important that we tend to use a lot of them. And then our websites become too slow.
-Using the right image formats and sizes is very important, and I suggest you read [The picture tag](/the-picture-tag) and [How to get 100 website performance score](/how-to-get-100-performance-score).
+Using the right image formats and sizes is very important, and I suggest you read [The picture tag](/the-picture-tag/) and [How to get 100 website performance score](/how-to-get-100-performance-score/).
 
 Here we look at different tricks that can improve the performance of a website by reducing the number of HTTP requests for images but still using all the images.
 
