--- a/content/blog/javascript-part-five/index.mdx
+++ b/content/blog/javascript-part-five/index.mdx
@@ -304,7 +304,7 @@ Math.trunc(x) // Integer part of x, removing any fractional digits.
 * Working with numbers is relatively easy, but there are some gotchas.
 
 ### Previously on "Let's Learn JavaScript"
-* [How JavaScript compares to other programming languages](/javascript-part-one) and the mindset you need to learn JavaScript
-* ["Hello, World!"](/javascript-part-two) in JavaScript
-* JavaScript [values and bindings](/javascript-part-three)
-* How to [name things](/javascript-part-four) in JavaScript
+* [How JavaScript compares to other programming languages](/javascript-part-one/) and the mindset you need to learn JavaScript
+* ["Hello, World!"](/javascript-part-two/) in JavaScript
+* JavaScript [values and bindings](/javascript-part-three/)
+* How to [name things](/javascript-part-four/) in JavaScript
