--- a/content/blog/javascript-part-four/index.mdx
+++ b/content/blog/javascript-part-four/index.mdx
@@ -6,9 +6,9 @@ description: How to name things in JavaScript and what names you cannot use
 keywords: ['JavaScript']
 ---
 Previously on "Let's Learn JavaScript":
-* [How JavaScript compares to other programming languages](/javascript-part-one) and the mindset you need to learn JavaScript
-* ["Hello, World!"](/javascript-part-two) in JavaScript
-* JavaScript [values and bindings](/javascript-part-three)
+* [How JavaScript compares to other programming languages](/javascript-part-one/) and the mindset you need to learn JavaScript
+* ["Hello, World!"](/javascript-part-two/) in JavaScript
+* JavaScript [values and bindings](/javascript-part-three/)
 
 Now it's time to see how we name things in JavaScript.
 
