--- a/content/blog/javascript-part-six/index.mdx
+++ b/content/blog/javascript-part-six/index.mdx
@@ -195,7 +195,7 @@ console.log(censor('JFK was killed by Mafia', 'Mafia')) // JFK was killed by ***
 
 ### Previously on "Let's Learn JavaScript"
 * [How JavaScript compares to other programming languages](/javascript-part-one) and the mindset you need to learn JavaScript
-* ["Hello, World!"](/javascript-part-two) in JavaScript
-* JavaScript [values and bindings](/javascript-part-three)
-* How to [name things](/javascript-part-four) in JavaScript
-* [Data types](/javascript-part-five) in JavaScript
+* ["Hello, World!"](/javascript-part-two/) in JavaScript
+* JavaScript [values and bindings](/javascript-part-three/)
+* How to [name things](/javascript-part-four/) in JavaScript
+* [Data types](/javascript-part-five/) in JavaScript
