--- a/content/blog/javascript-part-three/index.mdx
+++ b/content/blog/javascript-part-three/index.mdx
@@ -7,8 +7,8 @@ keywords: ['JavaScript']
 ---
 
 This is the third part of the "Let's Learn JavaScript" tutorial. 
-[In the first part](/javascript-part-one), we learned how JavaScript compares to other programming languages and the mindset you need to learn JavaScript.
-And [in the second part](/javascript-part-two), we have seen we can run "Hello, World!" in JavaScript. 
+[In the first part](/javascript-part-one/), we learned how JavaScript compares to other programming languages and the mindset you need to learn JavaScript.
+And [in the second part](/javascript-part-two/), we have seen we can run "Hello, World!" in JavaScript. 
 
 Now we continue with some fundamentals features of JavaScript.
 
@@ -54,7 +54,7 @@ Add comments for complicated code, you will thank yourself later when you have t
 In JavaScript, we print out things using the `console` methods.
 
 To see the console output in the browser, open the Developer Tools to the right and switch to the "Console" tab. 
-While following these lessons, you should keep the Developer Tools Console open. See the [previous part of this tutorial](/javascript-part-two) to learn how to open the console.
+While following these lessons, you should keep the Developer Tools Console open. See the [previous part of this tutorial](/javascript-part-two/) to learn how to open the console.
 
 If you are using a nice browser like Chrome or Firefox, the console output is displayed on the right side of the editor so you don't have to open 
 the Developer Tools Console.
