--- a/content/blog/javascript-part-two/index.mdx
+++ b/content/blog/javascript-part-two/index.mdx
@@ -7,7 +7,7 @@ keywords: ['JavaScript']
 ---
 
 This is the second part of the "Let's Learn JavaScript" tutorial. 
-[In the first part](/javascript-part-one), we learned how JavaScript compares to other programming languages and the mindset you need to learn JavaScript.
+[In the first part](/javascript-part-one/), we learned how JavaScript compares to other programming languages and the mindset you need to learn JavaScript.
 
 Now we learn to make and run our first JavaScript program, of course, the classic "Hello, World!"
 
